--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Bringup the environment
-      run: docker-compose up -d
+      run: docker compose up -d
     - name: Sleep for 60 seconds
       uses: jakejarvis/wait-action@master
       with:
@@ -30,5 +30,5 @@ jobs:
         cd $GITHUB_WORKSPACE
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Tests    
+    - name: Run Tests
       run: python3 test/etcd-test.py
