--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,10 @@ jobs:
         time: '60s'
     - name: List all containers
       run: docker ps -a
-    - name: Testing connection to Etcd cluster via nginx 
+    - name: Testing connection to Etcd cluster via nginx
       run: |
         cd $GITHUB_WORKSPACE
-        python -m pip install --upgrade pip
+        python3 -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
       run: python3 test/etcd-test.py
